--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -80,7 +80,7 @@ macM1_task:
     image: ghcr.io/cirruslabs/macos-monterey-base:latest
   script: |
     brew update
-    brew install objc-codegenutils objc-run create-dmg
+    brew install objc-codegenutils objc-run 
     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio gsl pandoc vulkan-headers hdf5
     brew install iltommi/brews/hdf4
     brew install iltommi/brews/clfft
@@ -88,7 +88,7 @@ macM1_task:
     cmake ..
     make -j$(sysctl -n hw.ncpu) install
     ../resources/macPackage/prepareapp.sh
-    cp Neutrino-*.dmg ..
+    cp Neutrino-*.zip ..
   package_artifacts:
     path: "Neutrino-*.*"
 
