--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,6 +32,7 @@ jobs:
         make -j$(sysctl -n hw.ncpu)
         make install
         cd ..
+        find python
         cd generator
         qmake -r generator.pro
         make -j10
