--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -84,6 +84,27 @@ macM1_task:
     brew install libomp git cmake fftw gcc qt lcov pkg-config zlib cmake libtiff cfitsio gsl pandoc vulkan-headers hdf5
     brew install iltommi/brews/hdf4
     brew install iltommi/brews/clfft
+    
+    git clone https://github.com/iltommi/pythonqt.git
+    cd pythonqt
+    wget https://www.python.org/ftp/python/3.12.2/Python-3.12.2.tgz
+    tar -zxf Python-3.12.2.tgz
+    cd Python-3.12.2
+    ./configure --prefix=$(pwd)/../python
+    make -j$(sysctl -n hw.ncpu)
+    make install
+    cd ..
+    find python/bin
+    cd generator
+    qmake -r generator.pro
+    make -j10
+    QTDIR=$(brew --prefix qt) ./pythonqt_generator
+    cd ..
+    PYTHON_VERSION=$(./python/bin/python3 --version | cut -d " " -f 2 | cut -d "." -f1,2) PYTHON_DIR=$(pwd)/python QTDIR=$(brew --prefix qt) qmake -r
+    make -j10
+    INSTALL_ROOT=$(brew --prefix) make install
+    cd ..
+     
     mkdir -p build && cd build
     cmake ..
     make -j$(sysctl -n hw.ncpu) install
