fix github action for pythonqt 7

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -89,7 +89,7 @@ macM1_task:
     wget https://www.python.org/ftp/python/3.12.2/Python-3.12.2.tgz
     tar -zxf Python-3.12.2.tgz
     cd Python-3.12.2
-    ./configure --prefix=$(pwd)/../python
+    ./configure --prefix=$(pwd)/../python --prefix=$(pwd)/../python --disable-shared --enable-optimizations --without-readline --with-lto=yes  --disable-test-modules
     make -j$(sysctl -n hw.ncpu)
     make install
     cd ..
