--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -84,8 +84,11 @@ opensuseleap_task:
     zypper --gpg-auto-import-keys ref
     zypper update -y
     zypper install -y gcc gcc-c++ qt6-* lsb-release libtiff-devel gsl-devel blas-devel pandoc hdf5-devel cfitsio-devel fftw3-threads-devel rpm-build git
+    ls -l /usr/bin/gcc*
     ls -l /usr/bin/gcc-[0-9]*
-    update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-[0-9][0-9] 50
+    # update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-[0-9][0-9] 50
+    update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-13 50
+    ls -l /usr/bin/gcc*
     mkdir build && cd build
     cmake ..
     make -j2 package
