--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -85,7 +85,8 @@ opensuseleap_task:
     zypper update -y
     zypper install -y gcc gcc-c++ qt6-* lsb-release libtiff-devel gsl-devel blas-devel pandoc hdf5-devel cfitsio-devel fftw3-threads-devel rpm-build git
     mkdir build && cd build
-    cmake -DCMAKE_C_COMPILER=/usr/bin/gcc-[0-9][0-9] -DCMAKE_CXX_COMPILER=/usr/bin/g++-[0-9][0-9]  ..
+    ls -l /usr/bin/g??-??
+    cmake -DCMAKE_C_COMPILER=/usr/bin/gcc-13 -DCMAKE_CXX_COMPILER=/usr/bin/g++-13  ..
     cmake ..
     make -j2 package
     cp Neutrino*.rpm ..
