--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -85,11 +85,7 @@ opensuseleap_task:
     zypper update -y
     zypper install -y gcc gcc-c++ qt6-* lsb-release libtiff-devel gsl-devel blas-devel pandoc hdf5-devel cfitsio-devel fftw3-threads-devel rpm-build git
     mkdir build && cd build
-    ls -l /usr/bin/g??-??
-    ls -l /usr/bin/g++-[0-9]*
-    ls -l /usr/bin/g++-[0-9][0-9]
-    export compiler=/usr/bin/g++-[0-9][0-9]
-    echo $compiler
+    export compiler=$(ls -1 /usr/bin/g++-[0-9][0-9])
     cmake -DCMAKE_CXX_COMPILER=$compiler  ..
     cmake ..
     make -j2 package
