--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -271,7 +271,7 @@ AppImageArm_task:
     APPIMAGE_EXTRACT_AND_RUN: 1
     LD_LIBRARY_PATH: AppDir/usr/lib    
   script: |
-    dnf -y install gcc gcc-c++ libtiff-devel gsl-devel redhat-lsb-core blas-devel pandoc hdf-devel hdf5-devel cfitsio-devel fftw3-devel rpm-build qt6-* git wget
+    dnf -y install gcc gcc-c++ libtiff-devel gsl-devel redhat-lsb blas-devel pandoc hdf-devel hdf5-devel cfitsio-devel fftw3-devel rpm-build qt6-* git wget
     wget https://github.com/linuxdeploy/linuxdeploy/releases/download/1-alpha-20240109-1/linuxdeploy-aarch64.AppImage
     wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/1-alpha-20240109-1/linuxdeploy-plugin-qt-aarch64.AppImage
     chmod +x linuxdeploy*.AppImage
